syntax = "proto3";
package com.bitat.repository.pbDto;
//ack消息
message AckMsg{
  //接受人id
  int64 to_id = 1;
  //发送人id
  int64 from_id = 2;
  //发送时间
  int64 time = 3;
}
//聊天消息载体
message ChatMsg{
  //接受人id
  int64 to_id = 1;
  //发送人id
  int64 from_id = 2;
  //发送时间
  int64 time = 3;
  //服务器路由
  int32 to_router = 4;
  //服务器路由
  int32 from_router = 5;
  //data类型
  int32 kind=6;
  //数据 text,url,json 等任意类型
  bytes data = 7;
}

message ChatMsgList{
  repeated ChatMsg msg_list = 1;
}

//聊天消息回应体
message ChatRecMsg{
  //接受人id
  int64 to_id = 1;
  //发送人id
  int64 from_id = 2;
  //发送时间
  int64 time = 3;
  //服务器路由
  int32 to_router = 4;
  //服务器路由
  int32 from_router = 5;
  //是否接收消息 及其原因
  int32 receive = 6;
}

//前端无视
message ChatMsgId{
  int64 to_id = 1;
  int64 from_id = 2;
  int64 time = 3;
  int32 to_router = 4;
  int32 from_router = 5;
}

//社交及系统消息载体
message NoticeMsg{
  //接受人id
  int64 to_id = 1;
  //发送人id
  int64 from_id = 2;
  //发送时间
  int64 time = 3;
  //data类型
  int32 kind=4;
  //数据 text,url,json 等任意类型
  bytes data = 5;
}

message NoticeMsgList{
  repeated NoticeMsg msg_list = 1;
}

